--- a/pageTheScroll/pageTheScroll/Base.lproj/Main.storyboard
+++ b/pageTheScroll/pageTheScroll/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -24,13 +25,36 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Sky" highlightedImage="Sky" translatesAutoresizingMaskIntoConstraints="NO" id="xk9-e2-w5I">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Sun" highlightedImage="Sun" translatesAutoresizingMaskIntoConstraints="NO" id="GYv-Td-PqQ">
+                                <rect key="frame" x="268" y="28" width="91" height="92"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="91" id="0yN-vj-37U"/>
+                                    <constraint firstAttribute="height" constant="92" id="8lr-VZ-m5H"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Mountains" translatesAutoresizingMaskIntoConstraints="NO" id="5Wp-Fl-m3n">
+                                <rect key="frame" x="0.0" y="482" width="375" height="185"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <string key="highlightedImage" base64-UTF8="YES">
+CQ
+</string>
+                            </imageView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qrw-sf-9A8">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="xk9-e2-w5I" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="2OB-7Y-WmJ"/>
+                            <constraint firstItem="GYv-Td-PqQ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="8ZP-47-dqT"/>
+                            <constraint firstItem="qrw-sf-9A8" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="DtG-JD-eGx"/>
                             <constraint firstAttribute="trailing" secondItem="xk9-e2-w5I" secondAttribute="trailing" id="EDh-d2-ve3"/>
+                            <constraint firstAttribute="trailing" secondItem="qrw-sf-9A8" secondAttribute="trailing" id="NCI-wl-EfI"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="xk9-e2-w5I" secondAttribute="bottom" id="c32-gy-T6n"/>
                             <constraint firstItem="xk9-e2-w5I" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="huU-Nv-XhA"/>
+                            <constraint firstItem="GYv-Td-PqQ" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="oSj-Yv-4DZ"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="qrw-sf-9A8" secondAttribute="bottom" id="oV8-dx-LaX"/>
+                            <constraint firstItem="qrw-sf-9A8" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="pzd-wO-gGs"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -40,6 +64,13 @@
         </scene>
     </scenes>
     <resources>
+        <image width="16" height="16">
+            <string key="name" base64-UTF8="YES">
+CQ
+</string>
+        </image>
+        <image name="Mountains" width="375" height="100"/>
         <image name="Sky" width="375" height="667"/>
+        <image name="Sun" width="53" height="53"/>
     </resources>
 </document>
