--- a/pageTheScroll/pageTheScroll/Base.lproj/Main.storyboard
+++ b/pageTheScroll/pageTheScroll/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -19,34 +19,36 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Sky" highlightedImage="Sky" translatesAutoresizingMaskIntoConstraints="NO" id="xk9-e2-w5I">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Sun" highlightedImage="Sun" translatesAutoresizingMaskIntoConstraints="NO" id="GYv-Td-PqQ">
-                                <rect key="frame" x="268" y="28" width="91" height="92"/>
+                                <rect key="frame" x="303" y="28" width="91" height="92"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="91" id="0yN-vj-37U"/>
                                     <constraint firstAttribute="height" constant="92" id="8lr-VZ-m5H"/>
                                 </constraints>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Mountains" translatesAutoresizingMaskIntoConstraints="NO" id="5Wp-Fl-m3n">
-                                <rect key="frame" x="0.0" y="482" width="375" height="185"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <string key="highlightedImage" base64-UTF8="YES">
-CQ
-</string>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Mountains" translatesAutoresizingMaskIntoConstraints="NO" id="5Wp-Fl-m3n">
+                                <rect key="frame" x="0.0" y="534" width="414" height="202"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="202" id="flQ-Mm-xHT"/>
+                                </constraints>
                             </imageView>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qrw-sf-9A8">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="5Wp-Fl-m3n" firstAttribute="trailing" secondItem="xk9-e2-w5I" secondAttribute="trailing" id="1zp-qK-A7q"/>
                             <constraint firstItem="xk9-e2-w5I" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="2OB-7Y-WmJ"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="5Wp-Fl-m3n" secondAttribute="bottom" id="6Ry-bR-Rcn"/>
                             <constraint firstItem="GYv-Td-PqQ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="8ZP-47-dqT"/>
+                            <constraint firstItem="5Wp-Fl-m3n" firstAttribute="leading" secondItem="qrw-sf-9A8" secondAttribute="leading" id="AYE-NH-5tZ"/>
                             <constraint firstItem="qrw-sf-9A8" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="DtG-JD-eGx"/>
                             <constraint firstAttribute="trailing" secondItem="xk9-e2-w5I" secondAttribute="trailing" id="EDh-d2-ve3"/>
                             <constraint firstAttribute="trailing" secondItem="qrw-sf-9A8" secondAttribute="trailing" id="NCI-wl-EfI"/>
@@ -64,15 +66,10 @@ CQ
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="117.59999999999999" y="123.68815592203899"/>
+            <point key="canvasLocation" x="117.39130434782609" y="123.09782608695653"/>
         </scene>
     </scenes>
     <resources>
-        <image width="16" height="16">
-            <string key="name" base64-UTF8="YES">
-CQ
-</string>
-        </image>
         <image name="Mountains" width="375" height="100"/>
         <image name="Sky" width="375" height="667"/>
         <image name="Sun" width="53" height="53"/>
