--- a/pageTheScroll/pageTheScroll/Base.lproj/Main.storyboard
+++ b/pageTheScroll/pageTheScroll/Base.lproj/Main.storyboard
@@ -63,6 +63,9 @@
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="qrw-sf-9A8" secondAttribute="bottom" id="vOJ-Io-drs"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="scrollView" destination="qrw-sf-9A8" id="KkP-9V-86c"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
