--- a/pageScrollX2/pageScrollX2/Base.lproj/Main.storyboard
+++ b/pageScrollX2/pageScrollX2/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="pageScrollX2" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,55 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Sky" translatesAutoresizingMaskIntoConstraints="NO" id="ARk-dl-55g">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Sun" translatesAutoresizingMaskIntoConstraints="NO" id="Yay-dd-eXc">
+                                <rect key="frame" x="270" y="35" width="105" height="95"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="95" id="iBD-cz-ew1"/>
+                                    <constraint firstAttribute="width" constant="105" id="qEq-1G-zgt"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Mountains" translatesAutoresizingMaskIntoConstraints="NO" id="67K-LQ-o7E">
+                                <rect key="frame" x="0.0" y="450" width="375" height="217"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="217" id="Kyv-sg-UlM"/>
+                                </constraints>
+                            </imageView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ljx-iv-ykg">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="ARk-dl-55g" secondAttribute="trailing" id="1jz-rK-TjV"/>
+                            <constraint firstItem="67K-LQ-o7E" firstAttribute="leading" secondItem="ARk-dl-55g" secondAttribute="leading" id="P1s-mV-h3M"/>
+                            <constraint firstItem="ljx-iv-ykg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Rry-2F-Ppm"/>
+                            <constraint firstItem="Yay-dd-eXc" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="15" id="ZMU-50-utR"/>
+                            <constraint firstItem="ARk-dl-55g" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="dgU-Nq-xpk"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="67K-LQ-o7E" secondAttribute="bottom" id="il2-Zf-KQk"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="ARk-dl-55g" secondAttribute="bottom" id="l0K-d2-M7i"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="ljx-iv-ykg" secondAttribute="bottom" id="okx-5k-amc"/>
+                            <constraint firstAttribute="trailing" secondItem="ljx-iv-ykg" secondAttribute="trailing" id="tRW-hH-KBc"/>
+                            <constraint firstItem="ARk-dl-55g" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="wzC-TO-ne7"/>
+                            <constraint firstAttribute="trailing" secondItem="Yay-dd-eXc" secondAttribute="trailing" id="xgR-H4-J8f"/>
+                            <constraint firstItem="ljx-iv-ykg" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="yXj-sS-cYv"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="scrollViewX" destination="ljx-iv-ykg" id="NXb-B5-SWh"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="122.78860569715144"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Mountains" width="375" height="100"/>
+        <image name="Sky" width="375" height="667"/>
+        <image name="Sun" width="53" height="53"/>
+    </resources>
 </document>
