--- a/pageScrollX2/pageScrollX2/Base.lproj/Main.storyboard
+++ b/pageScrollX2/pageScrollX2/Base.lproj/Main.storyboard
@@ -40,6 +40,9 @@
                             </imageView>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ljx-iv-ykg">
                                 <rect key="frame" x="58" y="0.0" width="260" height="667"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="260" id="kwn-2c-DpL"/>
+                                </constraints>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
